--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,18 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 spring.liquibase.change-log = classpath:/liquibase/master.xml
+spring.mail.host= localhost
+spring.mail.port= 25
+spring.mail.username=notifaay@gmail.com
+spring.mail.password=TestTest123
+spring.thymeleaf.cache = true
+spring.messages.basename= i18n/messages
+clientApp.name = TaskManager
+
+
+cors.allowed-origins= "http://localhost:8100,http://localhost:9000"
+cors.allowed-methods= "*"
+cors.allowed-headers= "*"
+cors.exposed-headers= "Link,X-Total-Count,X-${clientApp.name}-alert,X-${clientApp.name}-error,X-${clientApp.name}-params"
+cors.allow-credentials= true
+cors.max-age: 1800
