--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,10 @@
 			<artifactId>jhipster-framework</artifactId>
 			<version>7.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
