--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "bootstrap": "4.6.0",
     "bootswatch": "4.6.0",
     "dayjs": "1.10.4",
+    "ngx-bootstrap": "^6.2.0",
     "ngx-infinite-scroll": "10.0.1",
     "ngx-webstorage": "7.0.1",
     "rxjs": "6.6.7",
