navbar top footer bottom center content finally

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,7 @@ cors.allowed-headers= "*"
 cors.exposed-headers= "Link,X-Total-Count,X-${clientApp.name}-alert,X-${clientApp.name}-error,X-${clientApp.name}-params"
 cors.allow-credentials= true
 cors.max-age: 1800
+
+logging.level.root=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=DEBUG
