--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,15 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/taskmanager
 spring.datasource.username=root
 spring.datasource.password=1q2w3e4r
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 spring.liquibase.change-log = classpath:/liquibase/master.xml
-spring.mail.host= localhost
-spring.mail.port= 25
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.username=notifaay@gmail.com
 spring.mail.password=TestTest123
-spring.thymeleaf.cache = true
 spring.messages.basename= i18n/messages
 clientApp.name = TaskManager
 
@@ -22,6 +22,4 @@ cors.exposed-headers= "Link,X-Total-Count,X-${clientApp.name}-alert,X-${clientAp
 cors.allow-credentials= true
 cors.max-age: 1800
 
-logging.level.root=DEBUG
 logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=DEBUG
