--- a/package.json
+++ b/package.json
@@ -77,18 +77,18 @@
     "@angular/platform-browser-dynamic": "11.2.7",
     "@angular/router": "11.2.7",
     "@fortawesome/angular-fontawesome": "0.8.2",
-    "@fortawesome/fontawesome-free": "~5.6.3",
+    "@fortawesome/fontawesome-free": "^5.6.3",
     "@fortawesome/fontawesome-svg-core": "1.2.35",
     "@fortawesome/free-solid-svg-icons": "5.15.3",
     "@ng-bootstrap/ng-bootstrap": "9.1.0",
-    "@types/chart.js": "^2.7.40",
+    "@types/chart.js": "^2.9.32",
     "angular-bootstrap-md": "^11.1.0",
-    "animate.css": "~3.7.2",
+    "animate.css": "^3.7.2",
     "bootstrap": "4.6.0",
     "bootswatch": "4.6.0",
-    "chart.js": "^2.7.2",
+    "chart.js": "^2.5.0",
     "dayjs": "1.10.4",
-    "hammerjs": "~2.0.8",
+    "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^6.2.0",
     "ngx-infinite-scroll": "10.0.1",
     "ngx-webstorage": "7.0.1",
